src/TESTING/Errors/Error1.ksa
main(){
    //se mostra aquest que es el primer error
    bool a<- 2;

    int b<-a;
    //Quan es solucioni assignant el tipus correcte
    //Botará l'error de la constant
    //La constant s'ha d'inicialitzar en la declaració
    const int c;

    //Si ja té un valor, saltará l'error de que no es pot modificar
    c<-0;
}